syntax = "proto3";

package chat;

// メッセージを定義します。各メッセージには送信者、受信者、メッセージの内容、タイムスタンプが含まれます。
message ChatMessage {
    string sender = 1;
    string receiver = 2;
    string content = 3;
    int64 timestamp = 4;
}

// チャットサービスを定義します。このサービスでは、クライアントとサーバー間でメッセージを交換できます。
service ChatService {
    // ビディレクショナルストリーミングRPCを使用して、リアルタイムでメッセージを交換します。
    rpc Chat(ChatMessage) returns (stream ChatMessage);
}